--- a/index.html
+++ b/index.html
@@ -1,21 +1,119 @@
-<script type="importmap">
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="icon" href="https://www.mulungu.ce.gov.br/imagens/logo.png?time=1767516382" />
+    <title>Meu Mulungu</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              mulungu: {
+                50: '#f2fbf4',
+                100: '#dbf5e0',
+                200: '#b6eabb',
+                300: '#85d98e',
+                400: '#6ABA6B', // Verde Claro
+                500: '#2eac4e',
+                600: '#009639', // Verde Oficial (Primary)
+                700: '#007a2e',
+                800: '#065f27',
+                900: '#024d21',
+                blue: '#0057A4', // Azul Institucional
+                yellow: '#FFDD00', // Amarelo Destaque
+              }
+            }
+          }
+        }
+      }
+    </script>
+    <style>
+      /* Custom scrollbar for webkit */
+      ::-webkit-scrollbar {
+        width: 6px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #cbd5e1;
+        border-radius: 3px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #94a3b8;
+      }
+      body {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        /* Removed h-screen and overflow-hidden to allow native scrolling */
+        min-height: 100vh; 
+      }
+
+      /* Custom Animations */
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      @keyframes slideInUp {
+        from { opacity: 0; transform: translateY(12px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      @keyframes zoomIn {
+        from { opacity: 0; transform: scale(0.96); }
+        to { opacity: 1; transform: scale(1); }
+      }
+      @keyframes float {
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-10px); }
+      }
+      
+      .animate-fade-in {
+        animation: fadeIn 0.5s ease-out forwards;
+      }
+      .animate-slide-in {
+        animation: slideInUp 0.4s ease-out forwards;
+      }
+      .animate-zoom-in {
+        animation: zoomIn 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+      .animate-float {
+        animation: float 6s ease-in-out infinite;
+      }
+      .animate-float-delayed {
+        animation: float 6s ease-in-out 3s infinite;
+      }
+      .animate-pulse-slow {
+        animation: pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+      }
+    </style>
+  <script type="importmap">
 {
   "imports": {
-    "zod": "https://esm.sh/zod@^4.3.5",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-hook-form": "https://esm.sh/react-hook-form@^7.70.0",
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "lucide-react": "https://esm.sh/lucide-react@0.263.1",
+    "react-hook-form": "https://esm.sh/react-hook-form@7.45.4?external=react",
+    "react-hot-toast": "https://esm.sh/react-hot-toast@2.4.1?external=react,react-dom",
+    "@hookform/resolvers/zod": "https://esm.sh/@hookform/resolvers@3.3.0/zod?external=react-hook-form,zod",
+    "qrcode.react": "https://esm.sh/qrcode.react@3.1.0?external=react",
+    "zod": "https://esm.sh/zod@3.22.2",
+    "axios": "https://esm.sh/axios@1.4.0",
+    "cheerio": "https://esm.sh/cheerio@1.0.0-rc.12",
+    "iconv-lite": "https://esm.sh/iconv-lite@0.6.3",
+    "embla-carousel-react": "https://esm.sh/embla-carousel-react@8.0.0?external=react",
+    "embla-carousel-autoplay": "https://esm.sh/embla-carousel-autoplay@8.0.0?external=react",
     "@hookform/resolvers/": "https://esm.sh/@hookform/resolvers@^5.2.2/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react-hot-toast": "https://esm.sh/react-hot-toast@^2.6.0",
-    "qrcode.react": "https://esm.sh/qrcode.react@^4.2.0",
-    "next/": "https://esm.sh/next@^16.1.1/",
-    "axios": "https://esm.sh/axios@^1.13.2",
-    "cheerio": "https://esm.sh/cheerio@^1.1.2",
-    "iconv-lite": "https://esm.sh/iconv-lite@^0.7.1",
-    "embla-carousel-autoplay": "https://esm.sh/embla-carousel-autoplay@^8.6.0",
-    "embla-carousel-react": "https://esm.sh/embla-carousel-react@^8.6.0"
+    "next/": "https://esm.sh/next@^16.1.1/"
   }
 }
 </script>
-<!-- This file is deprecated. See app/layout.tsx -->
+</head>
+  <body class="bg-slate-50 text-slate-900 font-sans antialiased selection:bg-mulungu-100 selection:text-mulungu-900">
+    <div id="root" class="min-h-screen flex flex-col"></div>
+  </body>
+</html>
